[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/CormorantGaramond-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/menu_button/menu_button.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArrow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightArrow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "mouse_entered"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArrow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightArrow:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MenuButton" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -31.0
margin_right = 124.0
margin_bottom = 15.0
custom_constants/separation = 0
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 24.0
margin_bottom = 46.0
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true

[node name="Button" type="Button" parent="."]
margin_left = 24.0
margin_right = 124.0
margin_bottom = 46.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Button"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 124.0
margin_right = 148.0
margin_bottom = 46.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )
anims/mouse_entered = SubResource( 4 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
